--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,48 @@
         android:theme="@style/Theme.Mealgo"
         tools:targetApi="31">
         <activity
+            android:name=".InterminttentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MediterraneanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LowCarbActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PaleoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".KetoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VeganActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GlutenFreeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ExploreActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PopularActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewArrivalsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeDrinksActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeFoodActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeAllActivity"
+            android:exported="false" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
