--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,12 +11,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mealgo"
         tools:targetApi="31">
+
+        <!-- Aktivitas Registrasi, tidak diekspos -->
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
+
+        <!-- Aktivitas Login, tidak diekspos -->
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
+
+        <!-- Aktivitas Splashscreen yang diekspos -->
         <activity
             android:name=".SplashscActivity"
             android:exported="true"
@@ -25,10 +30,10 @@
             android:theme="@style/Theme.Mealgo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
